# ced

./: .coverage  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  ced.spec  pyproject.toml  requirements-dev.txt
.debug_ui_events/: test_hola_mundo_pilot.json
.github/workflows/: ci.yml
ced/: check-github-actions.sh
docs/: DEBUG_EVENTS_UI_OBSERVABILITY.md  EVALUACION.md  LECCIONES_APRENDIDAS.md
locale/es/LC_MESSAGES/: ced.mo  ced.po
scripts/: build_windows.ps1  install_visual_testing_tools.sh
src/ced/: __init__.py  __main__.py  app.py  config.py  i18n.py  theme.tcss  types.py
src/ced.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/ced/commands/: __init__.py  registry.py
src/ced/editor/: __init__.py  buffer.py  widget.py
src/ced/keybindings/: __init__.py  manager.py  presets.py
src/ced/panels/: __init__.py  confirm.py  editor_area.py  file_tree.py  help_bar.py  jump.py  opencode_panel.py  palette.py  quick_open.py  search_bar.py  status_bar.py  terminal.py
src/ced/themes/: __init__.py  manager.py
tests/: conftest.py  coverage_all.py  debug_ui_events.py  helpers.py  test_actions_mocked.py  test_advanced.py  test_app.py  test_buffer.py  test_commands.py  test_config.py  test_edge_cases.py  test_file_io_evidence.py  test_file_tree.py  test_final_coverage.py  test_help_bar.py  test_hola_mundo.py  test_hypothesis.py  test_i18n.py  test_init.py  test_integration.py  test_keybindings.py  test_language.py  test_main.py  test_mocked_coverage.py  test_panels.py  test_pilot_full.py  test_pilot_screens.py  test_pilot_search.py  test_screen_capture.py  test_terminal.py  test_themes.py  test_themes_detect.py  test_types.py  test_ui_audit.py  test_ux_emulation.py  test_vision.py  test_vision_ocr.py  test_visual_png.py  test_widget.py
tests/__snapshots__/: test_ux_emulation.ambr
