[project]
name = "ced"
version = "0.1.0"
description = "Terminal-native code editor"
requires-python = ">=3.11"
dependencies = ["textual>=8.0.0"]

[project.scripts]
ced = "ced.__main__:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
