[project]
name = "ced"
version = "0.1.0"
description = "Terminal-native code editor"
requires-python = ">=3.11"
dependencies = ["textual>=8.0.0"]

[project.scripts]
ced = "ced.__main__:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "sandbox: test uses sandboxed temporary files",
    "snapshot: test uses visual snapshot comparison",
    "visual: test uses Xvfb + pyautogui for PNG screenshot capture",
]

[tool.coverage.run]
source = ["src/ced"]
concurrency = ["thread"]
